--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.7"
   },
   "devDependencies": {
