--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "nanoid": "^3.2.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
