backend: create profile user image upload to cloudinary

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,5 @@
 MONGODB_URI=<your-db-uri>
 SECRET_JWT_KEY=<your-secret-key>
+CLOUDINARY_CLOUD_NAME=<your-cloudinary-cloud-name>
+CLOUDINARY_API_KEY=<your-cloudinary-api-key>
+CLOUDINARY_API_SECRET=<your-cloudinary-api-secret>
