--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
+    "multer": "^1.4.4",
     "nanoid": "^3.2.0"
   },
   "devDependencies": {
