--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chance": "^1.1.8",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
