frontend/backend: update banyak pokoknya lupa hehe:)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,9 @@
 REACT_APP_BASE_API_URL=<base_url>
+
+# WHATSAPP NUMBER ADMIN
+REACT_APP_WHATSAPP_NUMBER=<whatsapp_number>
+
+# ACCOUNT NUMBER FOR PAYMENT
+REACT_APP_ACCOUNT_NUMBER=<account_number>
+REACT_APP_BANK_NAME=<bank_name>
+REACT_APP_HOLDER_NAME=<holder_name>
